[package]
name = "polarhouse"
version.workspace = true
edition.workspace = true
license.workspace = true

[profile.release]
incremental = true
lto = "off"

[dependencies]
anyhow = "1.0.79"
polars = { version = "0.37.0", features = ["dtype-full", "parquet", "lazy", "strings", "meta", "regex"] }
tracing = { version = "0.1.37", features = ["attributes"] }
tracing-subscriber = { version = "0.3.17", features = ["json"] }
itertools = "0.12.0"
tokio = { version = "1.35.1", features = ["full"] }
futures = "0.3.30"
thiserror = "1.0.56"
derivative = "2.2.0"
klickhouse.workspace = true
reqwest = { version = "0.12.5", features = ["stream", "rustls-tls"], default-features = false }
tokio-util = { version = "0.7.11", features = ["io"] }

[workspace.dependencies]
klickhouse = { git = "https://github.com/cpg314/klickhouse.git", rev="a7365eba55c7c4a15cbb6e002aea87e171f9bccc" }

[workspace]
members = [ "py" ]

[workspace.package]
version = "0.1.3"
edition = "2021"
license = "MIT OR Apache-2.0"

[dev-dependencies]
yare = "3.0.0"
