[package]
name = "py"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[lib]
name = "polarhouse"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.20", features = ["extension-module"] }
polarhouse = { path = "../" }
pyo3-asyncio = { version = "0.20.0", features = ["tokio-runtime"] }
pyo3-polars = "0.11.3"
dirs = "5.0.1"
pyo3-log = "0.9.0"
log = "0.4.21"
